correcting spaces in folder names and image paths.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -153,7 +153,7 @@
                   </p>
                 <table class="swot-chart">
                   <td class = "swot-logo1" colspan="4">
-                      <img src="images/Competitor Logos/googledrive.png" alt = "Google Logo">
+                      <img src="images/Competitor-Logos/googledrive.png" alt = "Google Logo">
                     </td>
                   <tr class ="swot1">
                     <td>S</td>
@@ -168,7 +168,7 @@
                     <td>Smaller companies appealing to those distrustful of large corporations; <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully </td>
                   </tr>
                   <td class = "swot-logo2" colspan="4">
-                      <img src="images/Competitor Logos/dropbox.png" alt="Dropbox Logo">
+                      <img src="images/Competitor-Logos/dropbox.png" alt="Dropbox Logo">
                     </td>
                   <tr class ="swot2">
                     <td>S</td>
@@ -183,7 +183,7 @@
                     <td>lower cost competitiors; small data <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully </td>
                   </tr>
                   <td class = "swot-logo3" colspan="4">
-                      <img src="images/Competitor Logos/lovelyloot.png" alt="Lovely Loot Logo">
+                      <img src="images/Competitor-Logos/lovelyloot.png" alt="Lovely Loot Logo">
                     </td>
                   <tr class ="swot3">
                     <td>S</td>
@@ -198,7 +198,7 @@
                     <td>Limited options may encourage users to turn to <strong class = "chart-emphasis">more robust, less niche specific alternatives.</strong>  </td>
                   </tr>
                   <td class = "swot-logo4" colspan="4">
-                      <img src="images/Competitor Logos/floka.png" alt="Floka Logo">
+                      <img src="images/Competitor-Logos/floka.png" alt="Floka Logo">
                     </td>
                   <tr class ="swot4">
                     <td>S</td>
@@ -346,7 +346,7 @@
         </section>
 
         <section class = "information-architecture-fullwidth4">
-          <img class = "onboard-flow" src="images/User Flow/onboard-new-user.png" alt="Onboarding User Flow">
+          <img class = "onboard-flow" src="images/User-Flow/onboard-new-user.png" alt="Onboarding User Flow">
           </section>
 
         <button class = "all-flows">view all user flows</button>
@@ -359,22 +359,22 @@
           <p>Laying out the pages and content in this early stage revealed many questions about how the product would develop.</p>
         </div>
 
-        <img class = "sitemap-pic" src ="images/Site Map/site-map.png" alt="Site Map">
+        <img class = "sitemap-pic" src ="images/Site-Map/site-map.png" alt="Site Map">
 
         <div class = "sketches-intro">
             <h3>Sketches, Lo- Fidelity Wireframes & Prototype</h3>
             <p>I found that there were screens that should be consolidated, some that were not useful and some that were overlooked in sketching, such as the difference between the dashboard of a new user vs that of a returning user and the view of a text input window after a user enters the text and before they proceed to click a link. As a result, my sketches are different from my  lo-fi wireframes but reflect a series of digital iterations after these discoveries and review during a design critique.</p>
         </div>
 
-        <img class = "early-image" src = "images/Sketches and Wireframes/early-sketch-wireframe.png" alt="Early Sketches and Wireframes">
+        <img class = "early-image" src = "images/Sketches-and-Wireframes/early-sketch-wireframe.png" alt="Early Sketches and Wireframes">
 
         <div class = "wireframes">
-            <img class = "wireframe1" src = "images/Sketches and Wireframes/activity-wireframe.png" alt="Wireframe 1">
-            <img class = "wireframe2" src = "images/Sketches and Wireframes/existing-user-dashboard-wireframe.png" alt="Wireframe 2">
-            <img class = "wireframe3" src = "images/Sketches and Wireframes/new-user-dashboard-wireframe.png" alt="Wireframe 3">
-            <img class = "wireframe4" src = "images/Sketches and Wireframes/new-user-onboarding.png" alt="Wireframe 4">
-            <img class = "wireframe5" src = "images/Sketches and Wireframes/note-wireframe.png" alt="Wireframe 5">
-            <img class = "wireframe6" src = "images/Sketches and Wireframes/product-wireframe.png" alt="Wireframe 6">
+            <img class = "wireframe1" src = "images/Sketches-and-Wireframes/activity-wireframe.png" alt="Wireframe 1">
+            <img class = "wireframe2" src = "images/Sketches-and-Wireframes/existing-user-dashboard-wireframe.png" alt="Wireframe 2">
+            <img class = "wireframe3" src = "images/Sketches-and-Wireframes/new-user-dashboard-wireframe.png" alt="Wireframe 3">
+            <img class = "wireframe4" src = "images/Sketches-and-Wireframes/new-user-onboarding.png" alt="Wireframe 4">
+            <img class = "wireframe5" src = "images/Sketches-and-Wireframes/note-wireframe.png" alt="Wireframe 5">
+            <img class = "wireframe6" src = "images/Sketches-and-Wireframes/product-wireframe.png" alt="Wireframe 6">
         </div>
 
         <button class = "all-wireframes">View all wireframes</button>
@@ -413,11 +413,11 @@
               <p>My initial logo sketches explored ways to incorporate a monographic “v” and imagery to indicate the cloud and data insight aspects of the service.</p>
               <img class = "logo-sketches" src = "images/Branding/logo-sketches.png" alt ="Logo Sketches">
               <p>I created digital refinements of a few of the ideas and conducted an early round of preference tests for clarity on which ideas were the strongest.</P>
-              <img class = "logos-round-1" src= "images/Branding/Logos Round 1/logos-round-1.svg" alt ="Logo Sketches 1">
+              <img class = "logos-round-1" src= "images/Branding/Logos-Round-1/logos-round-1.svg" alt ="Logo Sketches 1">
               <p>Based on the results of an early preference test, I reduced my number of digital sketches and further refined them.</p>
-              <img class = "logos-round-1" src= "images/Branding/Logos Round 2/logos-round-2.svg" alt ="Logo Sketches 2">
+              <img class = "logos-round-1" src= "images/Branding/Logos-Round-2/logos-round-2.svg" alt ="Logo Sketches 2">
               <p>In a second round of preference tests and a subsequent design critique, Option 2 performed the best. While close to being a solid solution,  because of its simplicity, implementation of the V monogram and allusion to the statistical data of the Verve insights and data features, it did require some minor adjustments. </p>
-              <img class = "final-logo" src = "images/Branding/Logo Final/Group 2.2.png" alt ="Logo Final">
+              <img class = "final-logo" src = "images/Branding/Logo-Final/Group 2.2.png" alt ="Logo Final">
             </div>
 
         </section>
@@ -456,23 +456,23 @@
           <div class = "hifi-mockups">
             <h3>High Fidelity Mockups</h3>
             <p>As I created hi-fi mockups, I  discovered design elements that previously seemed to recede into the background of the app, but in actuality needed to be considered as part of a design pattern. Design features like process tracking dots and text captioning on menu icons, needed to be considered as I was developing  high fidelity mockups.</p>
-            <img class = "hifi-pic" src= "images/HiFi Mockups/activity-mockup.png" alt= "Activity Mockup">
-            <img class = "hifi-pic" src= "images/HiFi Mockups/existing-user-dashboard-mockup.png" alt= "Existign User Dashboard Mockup">
-            <img class = "hifi-pic" src= "images/HiFi Mockups/new-user-dashboard-mockup.png" alt= "New User Dashboard Mockup">
-            <img class = "hifi-pic"  src= "images/HiFi Mockups/landing-page-mockup.png" alt= "Landing Page Mockup">
-            <img class = "hifi-pic"  src= "images/HiFi Mockups/note-view-mockup.png" alt= "Note View Mockup">
-            <img class = "hifi-pic"  src= "images/HiFi Mockups/product-mockup.png" alt= "Product Mockup">
+            <img class = "hifi-pic" src= "images/HiFi-Mockups/activity-mockup.png" alt= "Activity Mockup">
+            <img class = "hifi-pic" src= "images/HiFi-Mockups/existing-user-dashboard-mockup.png" alt= "Existign User Dashboard Mockup">
+            <img class = "hifi-pic" src= "images/HiFi-Mockups/new-user-dashboard-mockup.png" alt= "New User Dashboard Mockup">
+            <img class = "hifi-pic"  src= "images/HiFi-Mockups/landing-page-mockup.png" alt= "Landing Page Mockup">
+            <img class = "hifi-pic"  src= "images/HiFi-Mockups/note-view-mockup.png" alt= "Note View Mockup">
+            <img class = "hifi-pic"  src= "images/HiFi-Mockups/product-mockup.png" alt= "Product Mockup">
           </div>
           <div class = "preference-tests">
             <h3>Preference Testing</h3>
             <p>There were still a few design decisions that I was uncertain about. Rather than choosing them based on my own preferences, it was important to get feedback from potential users. I preference tested various components such as button style, insights dashboard layout and landing page copywriting.</p>
             <div class = "test-images1">
-              <img class = "button-test" src= "images/Preference Testing/button-styles.png" alt= "Button Styles">
-              <img class = "dashboard-test"  src= "images/Preference Testing/insights-dashboards.png" alt= "Insights Dashboard Tests">
+              <img class = "button-test" src= "images/Preference-Testing/button-styles.png" alt= "Button Styles">
+              <img class = "dashboard-test"  src= "images/Preference-Testing/insights-dashboards.png" alt= "Insights Dashboard Tests">
             </div>
             <div class = "test-images2">
-              <img class = "homepage-test1"  src= "images/Preference Testing/homepage1.png" alt= "Homepage Test 1">
-              <img class = "homepage-test2"  src= "images/Preference Testing/homepage1.png" alt= "Homepage Test 2">
+              <img class = "homepage-test1"  src= "images/Preference-Testing/homepage1.png" alt= "Homepage Test 1">
+              <img class = "homepage-test2"  src= "images/Preference-Testing/homepage1.png" alt= "Homepage Test 2">
             </div>
             <p>I discovered that a solid blue button style, a one-screen dashboard view and direct, unquestioning text were overwhelmingly preferred. These revelations guided me as made a few changes before retesting my prototype.</p>
           </div>
@@ -490,11 +490,11 @@
           <div class = "final-revisions">
             <h3>Final Revisions</h3>
             <p>I considered that usability testers were having difficulty in determining which upload option to use to create a new product. While they ultimately did it successfully, it required multiple attempts and consideration to determine which menu options to use so I adjusted the menu options. </p>
-            <img class = "menus" src= "images/Final Revisions/menus.png" alt= "menu evolution">
+            <img class = "menus" src= "images/Final-Revisions/menus.png" alt= "menu evolution">
             <p>Based on design critique feedback, I made improvements to the empty state dashboards, providing a boundary to more clearly indicate the emptiness of the repository and including a call to action to “add your first file”.</p>
-            <img class = "empty-state-dashboards" src= "images/Final Revisions/dashboard.png" alt= "empty state dashboard evolution">
+            <img class = "empty-state-dashboards" src= "images/Final-Revisions/dashboard.png" alt= "empty state dashboard evolution">
             <p>I also adjusted the photo and file uploading screens to adhere to iOS Human Interface Guidelines to avoid adding an unfamiliar process with minimal experience value. At this stage, the product met all of the needs of the initial client brief, the needs revealed through user research, accounted for the feedback received in testing and critiques and incorporated Human Interface Guidelines. </p>
-            <img class = "final-revision-screens" src = "images/Final Revisions/final-revisions.png" alt= "final revisions view">
+            <img class = "final-revision-screens" src = "images/Final-Revisions/final-revisions.png" alt= "final revisions view">
           </div>
           </section>
 
@@ -515,7 +515,7 @@
           <img class = "top" src ="images/icons/top.png" alt= "Top icon">
           <h4 class = "top-text" >top</h4>
           <h4 class = "next-text">next</h4>
-          <img class = "next" src ="images/icons/right-arrow.png" alt= Next Icon
+          <img class = "next" src ="images/icons/right-arrow.png" alt= "Next Icon">
 
         </div>
 
