updating minor HTML improvements

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -23,7 +23,7 @@
 
         <nav class="navigation">
           <a class="logo" href="index.html">
-              <img class = "navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" border="0"  style="padding:0px;">
+              <img class = "navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
             </a>
           <a class="navigation-work" href="projectgridversion.html">Work</a>
           <a class="navigation-about" href="about.html">About</a>
@@ -92,6 +92,7 @@
                   <p>Maze</p>
                 <li>
                   <p>Usability Hub</p>
+              </ul>
             </div>
         </section>
 
@@ -224,6 +225,7 @@
           <div class = "user-stories-flows">
             <h3>User Stories & Flows</h3>
             <p>With a clear picture of the target audience, I was able to document the high priority user stories that a user would need to fulfill.</p>
+          </div>
         </section>
 
         <section class = "information-architecture-fullwidth2">
@@ -342,7 +344,7 @@
               <li><p>2. Upload or create content</p></li>
               <li><p>3. Browse, edit, collaborate and share content</p></li>
               <li><p>4. Analyze insights</p></li>
-            </ul></p>
+            </ul>
         </section>
 
         <section class = "information-architecture-fullwidth4">
@@ -392,7 +394,7 @@
             <p>I should revisit the availability of the free signup pathway and the wording of the buttons on the landing page to better indicate how a new user can get started.</p>
             <p>I need to consider adjusting a future testing script to better reflect the sorts of concerns that I expect to arise during testing and I need to be more explicit about the directions given, such as asking users to sign up for the premium account rather than leaving the choice up to them.</p>
             </div>
-          </section>
+
 
         <section class = "branding-indented1">
             <h2>Branding</h2>
@@ -417,7 +419,7 @@
               <p>Based on the results of an early preference test, I reduced my number of digital sketches and further refined them.</p>
               <img class = "logos-round-1" src= "images/Branding/Logos-Round-2/logos-round-2.svg" alt ="Logo Sketches 2">
               <p>In a second round of preference tests and a subsequent design critique, Option 2 performed the best. While close to being a solid solution,  because of its simplicity, implementation of the V monogram and allusion to the statistical data of the Verve insights and data features, it did require some minor adjustments. </p>
-              <img class = "final-logo" src = "images/Branding/Logo-Final/Group 2.2.png" alt ="Logo Final">
+              <img class = "final-logo" src = "images/Branding/Logo-Final/Group2.2.png" alt ="Logo Final">
             </div>
 
         </section>
