updating links and aligning a few wayward images.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -351,7 +351,7 @@
           <img class = "onboard-flow" src="images/User-Flow/onboard-new-user.png" alt="Onboarding User Flow">
           </section>
 
-        <button class = "all-flows">view all user flows</button>
+        <button class = "all-flows" onclick="window.location.href = 'https://www.dropbox.com/s/n4ame1dukwewgpa/User%20Flows.png?dl=0';">view all user flows</button>
 
         <!-- <section class = "information-architecture-indented5"> -->
 
@@ -379,7 +379,7 @@
             <img class = "wireframe6" src = "images/Sketches-and-Wireframes/product-wireframe.png" alt="Wireframe 6">
         </div>
 
-        <button class = "all-wireframes">View all wireframes</button>
+        <button class = "all-wireframes" onclick="window.location.href = 'https://www.figma.com/file/21um8xfMV89zpfGq7uyW2w/Verve-Wireframes-and-Lofi-Prototype?node-id=46378%3A4647';">View all wireframes</button>
 
         <div class = "user-testing">
             <h3>User Testing Lo-Fi Wireframes</h3>
@@ -403,11 +403,11 @@
               <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
               <p class = "branding-p2">The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
               <div class = "branding-theme">
-                <img class = "branding-idea" src = "images/Branding/vibrant-color.png" alt ="Vibrant Color">
-                <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png" alt ="Gender Inclusive">
-                <img class = "branding-idea"  src = "images/Branding/simple-wordmark.png" alt ="Simple wordmark">
-                <img class = "branding-idea"  src = "images/Branding/minimal-modern.png" alt ="Minimal Modern">
-                <img class = "moodboard" src = "images/Branding/moodboard.jpg" alt ="Moodboard">
+                  <img class = "branding-idea" src = "images/Branding/vibrant-color.png" alt ="Vibrant Color">
+                  <img class = "branding-idea"  src = "images/Branding/gender-inclusive.png" alt ="Gender Inclusive">
+                  <img class = "branding-idea"  src = "images/Branding/simple-wordmark.png" alt ="Simple wordmark">
+                  <img class = "branding-idea"  src = "images/Branding/minimal-modern.png" alt ="Minimal Modern">
+                  <img class = "moodboard" src = "images/Branding/moodboard.jpg" alt ="Moodboard">
               </div>
             </div>
             <div class = "logo-design">
@@ -444,26 +444,28 @@
             <p>A blue tone palette was preferred by 63% of respondents. This confirmed my early inclinations about colors that would be suitable. I also found that blue was heavily used by competitors and color theory research revealed that this is a reliable and trusted choice, so not an unpopular one.</p>
             <p>Wanting to add more dynamism and depth to my color palette, I tested user response to combining gradients. This was preferred 67% of the time.</p>
             <p>Based on client feedback, I made slight adjustments to the palette and decided to use a gradient shade of blue as the primary color, in combination with a gradient shade of pink, in combination with gray, white, black and yellow.</p>
-
-            <img class = "final-colors" src="images/Branding/Colors/color1.png" alt= "Brand color 1">
-            <img class = "final-colors" src="images/Branding/Colors/color2.png" alt= "Brand color 1">
-            <img class = "final-colors" src="images/Branding/Colors/color3.png" alt= "Brand color 1">
-            <img class = "final-colors" src="images/Branding/Colors/color4.png" alt= "Brand color 1">
-            <img class = "final-colors" src="images/Branding/Colors/color5.png" alt= "Brand color 1">
-            <img class = "final-colors" src="images/Branding/Colors/color6.png" alt= "Brand color 1">
-
+            <div class = "colors">
+              <img class = "final-colors" src="images/Branding/Colors/color1.png" alt= "Brand color 1">
+              <img class = "final-colors" src="images/Branding/Colors/color2.png" alt= "Brand color 1">
+              <img class = "final-colors" src="images/Branding/Colors/color3.png" alt= "Brand color 1">
+              <img class = "final-colors" src="images/Branding/Colors/color4.png" alt= "Brand color 1">
+              <img class = "final-colors" src="images/Branding/Colors/color5.png" alt= "Brand color 1">
+              <img class = "final-colors" src="images/Branding/Colors/color6.png" alt= "Brand color 1">
+            </div>
             <p>I proceeded to prepare a full style guide that included the color palette along side additional branding guidelines such as typography, logo usage, and iconography. </p>
-            <button>View the Style Guide</button>
+            <button onclick="window.location.href = 'https://www.figma.com/proto/RfbwhkAeB4sWwogLNMTyD4co/Verve-Final-Style-Guide-and-Mockups-Prototype?node-id=0%3A1&viewport=400%2C325%2C0.04107077419757843&scaling=min-zoom';">View the Style Guide</button>
           </div>
           <div class = "hifi-mockups">
             <h3>High Fidelity Mockups</h3>
             <p>As I created hi-fi mockups, I  discovered design elements that previously seemed to recede into the background of the app, but in actuality needed to be considered as part of a design pattern. Design features like process tracking dots and text captioning on menu icons, needed to be considered as I was developing  high fidelity mockups.</p>
-            <img class = "hifi-pic" src= "images/HiFi-Mockups/activity-mockup.png" alt= "Activity Mockup">
-            <img class = "hifi-pic" src= "images/HiFi-Mockups/existing-user-dashboard-mockup.png" alt= "Existign User Dashboard Mockup">
-            <img class = "hifi-pic" src= "images/HiFi-Mockups/new-user-dashboard-mockup.png" alt= "New User Dashboard Mockup">
-            <img class = "hifi-pic"  src= "images/HiFi-Mockups/landing-page-mockup.png" alt= "Landing Page Mockup">
-            <img class = "hifi-pic"  src= "images/HiFi-Mockups/note-view-mockup.png" alt= "Note View Mockup">
-            <img class = "hifi-pic"  src= "images/HiFi-Mockups/product-mockup.png" alt= "Product Mockup">
+            <div class = hifi-group>
+              <img class = "hifi-pic" src= "images/HiFi-Mockups/activity-mockup.png" alt= "Activity Mockup">
+              <img class = "hifi-pic" src= "images/HiFi-Mockups/existing-user-dashboard-mockup.png" alt= "Existign User Dashboard Mockup">
+              <img class = "hifi-pic" src= "images/HiFi-Mockups/new-user-dashboard-mockup.png" alt= "New User Dashboard Mockup">
+              <img class = "hifi-pic"  src= "images/HiFi-Mockups/landing-page-mockup.png" alt= "Landing Page Mockup">
+              <img class = "hifi-pic"  src= "images/HiFi-Mockups/note-view-mockup.png" alt= "Note View Mockup">
+              <img class = "hifi-pic"  src= "images/HiFi-Mockups/product-mockup.png" alt= "Product Mockup">
+            </div>
           </div>
           <div class = "preference-tests">
             <h3>Preference Testing</h3>
@@ -492,11 +494,17 @@
           <div class = "final-revisions">
             <h3>Final Revisions</h3>
             <p>I considered that usability testers were having difficulty in determining which upload option to use to create a new product. While they ultimately did it successfully, it required multiple attempts and consideration to determine which menu options to use so I adjusted the menu options. </p>
-            <img class = "menus" src= "images/Final-Revisions/menus.png" alt= "menu evolution">
+            <div class = "revision screens">
+              <img class = "menus" src= "images/Final-Revisions/menus.png" alt= "menu evolution">
+            </div>
             <p>Based on design critique feedback, I made improvements to the empty state dashboards, providing a boundary to more clearly indicate the emptiness of the repository and including a call to action to “add your first file”.</p>
-            <img class = "empty-state-dashboards" src= "images/Final-Revisions/dashboard.png" alt= "empty state dashboard evolution">
+            <div class = "revision screens">
+              <img class = "empty-state-dashboards" src= "images/Final-Revisions/dashboard.png" alt= "empty state dashboard evolution">
+            </div>
             <p>I also adjusted the photo and file uploading screens to adhere to iOS Human Interface Guidelines to avoid adding an unfamiliar process with minimal experience value. At this stage, the product met all of the needs of the initial client brief, the needs revealed through user research, accounted for the feedback received in testing and critiques and incorporated Human Interface Guidelines. </p>
-            <img class = "final-revision-screens" src = "images/Final-Revisions/final-revisions.png" alt= "final revisions view">
+            <div class = "revision screens">
+              <img class = "final-revision-screens" src = "images/Final-Revisions/final-revisions.png" alt= "final revisions view">
+            </div>
           </div>
           </section>
 
