Minor text edit.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -399,7 +399,7 @@
         <section class = "branding-indented1">
             <h2>Branding</h2>
             <div class = "brainstorming">
-              <h3>Naming: Brainstorming and mindmapping</h3>
+              <h3>Naming: Brainstorming and Mindmapping</h3>
               <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
               <p class = "branding-p2">The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
               <div class = "branding-theme">
