Editing links to open in a new window. Minor edit to imagery.

--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
         <a class = "logo" href="index.html">
           <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
           </a>
-        <a class="navigation-work" href="projectgridversion.html">Work</a>
+        <a class="navigation-work" href="projectgridversion.html" target="_blank">Work</a>
         <a class="navigation-about" href="about.html">About</a>
-        <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf">Resume</a>
+        <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf" target="_blank">Resume</a>
       </header>
 
       <section class="bio-title">
