--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -25,9 +25,9 @@
           <a class="logo" href="index.html">
               <img class = "navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
             </a>
-          <a class="navigation-work" href="projectgridversion.html">Work</a>
+          <a class="navigation-work" href="projectgridversion.html" target="_blank">Work</a>
           <a class="navigation-about" href="about.html">About</a>
-          <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf">Resume</a>
+          <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf" target="_blank">Resume</a>
         </nav>
 
 
@@ -38,7 +38,7 @@
             <div class = "project-details">
               <img class="project-logo" src="images/verve-logo.png" alt = "Verve Logo">
               <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-              <button onclick="window.location.href = 'https://www.figma.com/proto/Dw8ix85jmlUZQ9pM8PRQQA/Verve-Final-Deliverables-Mockup-Prototype-and-Style-Guide?node-id=47269%3A12&viewport=116%2C260%2C0.015625&scaling=scale-down';">View the Prototype</button>
+              <button onClick="window.open('https://www.figma.com/proto/Dw8ix85jmlUZQ9pM8PRQQA/Verve-Final-Deliverables-Mockup-Prototype-and-Style-Guide?node-id=47269%3A12&viewport=116%2C260%2C0.015625&scaling=scale-down');">View the Prototype</button>
             </div>
           </section>
 
@@ -351,7 +351,8 @@
           <img class = "onboard-flow" src="images/User-Flow/onboard-new-user.png" alt="Onboarding User Flow">
           </section>
 
-        <button class = "all-flows" onclick="window.location.href = 'https://www.dropbox.com/s/n4ame1dukwewgpa/User%20Flows.png?dl=0';">view all user flows</button>
+        <button class = "all-flows" onClick="window.open('https://www.dropbox.com/s/n4ame1dukwewgpa/User%20Flows.png?dl=0');">View all User Flows</button>
+
 
         <!-- <section class = "information-architecture-indented5"> -->
 
@@ -379,7 +380,7 @@
             <img class = "wireframe6" src = "images/Sketches-and-Wireframes/product-wireframe.png" alt="Wireframe 6">
         </div>
 
-        <button class = "all-wireframes" onclick="window.location.href = 'https://www.figma.com/file/21um8xfMV89zpfGq7uyW2w/Verve-Wireframes-and-Lofi-Prototype?node-id=46378%3A4647';">View all wireframes</button>
+        <button class = "all-wireframes" onClick="window.open('https://www.figma.com/file/21um8xfMV89zpfGq7uyW2w/Verve-Wireframes-and-Lofi-Prototype?node-id=46378%3A4647');">View all Wireframes</button>
 
         <div class = "user-testing">
             <h3>User Testing Lo-Fi Wireframes</h3>
@@ -453,7 +454,8 @@
               <img class = "final-colors" src="images/Branding/Colors/color6.png" alt= "Brand color 1">
             </div>
             <p>I proceeded to prepare a full style guide that included the color palette along side additional branding guidelines such as typography, logo usage, and iconography. </p>
-            <button onclick="window.location.href = 'https://www.figma.com/proto/RfbwhkAeB4sWwogLNMTyD4co/Verve-Final-Style-Guide-and-Mockups-Prototype?node-id=0%3A1&viewport=400%2C325%2C0.04107077419757843&scaling=min-zoom';">View the Style Guide</button>
+            <button onClick="window.open('https://www.figma.com/proto/RfbwhkAeB4sWwogLNMTyD4co/Verve-Final-Style-Guide-and-Mockups-Prototype?node-id=0%3A1&viewport=400%2C325%2C0.04107077419757843&scaling=min-zoom');">View the Style Guide</button>
+
           </div>
           <div class = "hifi-mockups">
             <h3>High Fidelity Mockups</h3>
