began to test out removal of table structures for grids

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -152,6 +152,84 @@
                 <h3>Competitive Analysis</h3>
                 <p>I analyzed four competitors, Google Drive, Dropbox, Lovelyloot and Flöka and LovelyLoot. The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.
                   </p>
+                <!-- <div class = "swot-grid">
+                  <img class = "google-logo" src="images/Competitor-Logos/googledrive.png" alt = "Google Logo">
+                  <div>
+                    <p>S</p>
+                    <p><strong class = "chart-emphasis">Industry Recognition</strong>; integration with other Google Services</p>
+                  </div>
+                  <div>
+                    <p>W</p>
+                    <p>Stale UI evolution;  <strong class = "chart-emphasis">big data distrust</strong></p>
+                  </div>
+                  <div>
+                    <p>O</p>
+                    <p><strong class = "chart-emphasis">Improve mobile experience and UI</strong>; allow more customization</p>
+                  </div>
+                  <div>
+                    <p>T</p>
+                    <p>Smaller companies appealing to those distrustful of large corporations; <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully</p>
+                  </div>
+
+                  <img class="dropbox-logo" src="images/Competitor-Logos/dropbox.png" alt="Dropbox Logo">
+                  <div>
+                    <p>S</p>
+                    <p>Robust features; UI updates <strong class = "chart-emphasis">on trend</strong></p>
+                  </div>
+                  <div>
+                    <p>W</p>
+                    <p>Stale UI evolution;  <strong class = "chart-emphasis">big data distrust</strong></p>
+                  </div>
+                  <div>
+                    <p>O</p>
+                    <p>Offer more <strong class = "chart-emphasis">freemium bandwidth</strong>; allow more customization</p>
+                  </div>
+                  <div>
+                    <p>T</p>
+                    <p>lower cost competitiors; small data <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully</p>
+                  </div>
+
+
+                  <img class = "lovelyloot-logo" src="images/Competitor-Logos/lovelyloot.png" alt="Lovely Loot Logo">
+                  <div>
+                    <p>S</p>
+                    <p>Strong niche definition; clean and simple interface; strong product catalog for <strong class = "chart-emphasis">easily adding your items</strong></p>
+                  </div>
+                  <div>
+                    <p>W</p>
+                    <p><strong class = "chart-emphasis">Limited to just beauty</strong>; low brand recognition</p>
+                  </div>
+                  <div>
+                    <p>O</p>
+                    <p>Offer <strong class = "chart-emphasis">overall wellness product tracking</strong>; expand file type compatibility</p>
+                  </div>
+                  <div>
+                    <p>T</p>
+                    <p>Limited options may encourage users to turn to <strong class = "chart-emphasis">more robust, less niche specific alternatives</p>
+                  </div>
+
+
+                  <img class = "google-logo" src="images/Competitor-Logos/googledrive.png" alt = "Google Logo">
+                  <div>
+                    <p>S</p>
+                    <p><strong class = "chart-emphasis">Industry Recognition</strong>; integration with other Google Services</p>
+                  </div>
+                  <div>
+                    <p>W</p>
+                    <p>Stale UI evolution;  <strong class = "chart-emphasis">big data distrust</strong></p>
+                  </div>
+                  <div>
+                    <p>O</p>
+                    <p><strong class = "chart-emphasis">Improve mobile experience and UI</strong>; allow more customization</p>
+                  </div>
+                  <div>
+                    <p>T</p>
+                    <p>Smaller companies appealing to those distrustful of large corporations; <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully</p>
+                  </div>
+
+
+                </div> -->
+
                 <table class="swot-chart">
                   <td class = "swot-logo1" colspan="4">
                       <img src="images/Competitor-Logos/googledrive.png" alt = "Google Logo">
@@ -213,12 +291,11 @@
                     <td>Expand to allow sharing; <strong class = "chart-emphasis">make it more gender neutral</strong>; expand file type compatibility</td>
                     <td>Slow development may lose engagement; feature bloat may lead to <strong class = "chart-emphasis">user fatigue; users may turn to a simpler product</strong>.</td>
                   </tr>
-
                 </table>
+
+
               </div>
           </div>
-
-
 
         <section class = "information-architecture-indented1">
           <h2> Information architecture</h2>
@@ -384,13 +461,13 @@
 
         <div class = "user-testing">
             <h3>User Testing Lo-Fi Wireframes</h3>
-            <p>I recruited three user testers to evaluate the protoype’s usability. They were asked to complete three tasks.
+            <p>I recruited three user testers to evaluate the protoype’s usability. They were asked to complete three tasks.</p>
               <ul>
                 <li><p>1. Sign up for an account</P></li>
                 <li><p>2. Add a piece of content</P></li>
                 <li><p>3. Organize a piece of content</P></li>
               </ul>
-            </p>
+
             <p> <strong class = chart-emphasis>Key Takeaways</strong></p>
             <p>I should revisit the availability of the free signup pathway and the wording of the buttons on the landing page to better indicate how a new user can get started.</p>
             <p>I need to consider adjusting a future testing script to better reflect the sorts of concerns that I expect to arise during testing and I need to be more explicit about the directions given, such as asking users to sign up for the premium account rather than leaving the choice up to them.</p>
