continued work on refactoring tables to use css grid.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -170,7 +170,9 @@
                     <p class = "swot-header">T</p>
                     <p>Smaller companies appealing to those distrustful of large corporations; <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully</p>
                   </div>
+                </div>
 
+                <div class =  "swot-white">
                   <img class="dropbox-logo" src="images/Competitor-Logos/dropbox.png" alt="Dropbox Logo">
                   <div>
                     <p class = "swot-header">S</p>
@@ -188,8 +190,9 @@
                     <p class = "swot-header">T</p>
                     <p>lower cost competitiors; small data <strong class = "chart-emphasis">niche providers</strong> catering to smaller groups more powerfully</p>
                   </div>
+                </div>
 
-
+                <div class = "swot-grid">
                   <img class = "lovelyloot-logo" src="images/Competitor-Logos/lovelyloot.png" alt="Lovely Loot Logo">
                   <div>
                     <p class = "swot-header">S</p>
@@ -207,8 +210,9 @@
                     <p class = "swot-header">T</p>
                     <p>Limited options may encourage users to turn to <strong class = "chart-emphasis">more robust</strong>, less niche specific alternatives</p>
                   </div>
+                </div>
 
-
+                <div class = "swot-white">
                   <img class = "floka-logo" src="images/Competitor-Logos/floka.png" alt="Floka Logo">
                   <div>
                     <p class = "swot-header">S</p>
